[gd_scene load_steps=4 format=2]

[ext_resource path="res://subscenes/pipe.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/scripts/obstacle.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 40 )

[node name="Obstacle" type="Node2D"]
position = Vector2( 0, 320 )
script = ExtResource( 2 )

[node name="ScoreArea" type="Area2D" parent="."]
position = Vector2( 0, -56 )
scale = Vector2( 0.8, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreArea"]
scale = Vector2( 1, 1.75 )
shape = SubResource( 1 )

[node name="PipeTop" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, -280 )
rotation = 3.14159
scale = Vector2( 1.2, 2 )

[node name="PipeBottom" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 120 )
scale = Vector2( 1.2, 2 )
[connection signal="body_shape_entered" from="ScoreArea" to="." method="_on_ScoreArea_body_shape_entered"]
[connection signal="body_entered" from="PipeTop" to="." method="_on_PipeTop_body_entered"]
[connection signal="body_entered" from="PipeBottom" to="." method="_on_PipeBottom_body_entered"]
